fixed header z-index issue

--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -42,7 +42,7 @@ h6 {
 .site-header {
   position: sticky;
   top: 0;
-  
+  z-index: 2;
 }
 
 .site-header.scrolled {
@@ -51,6 +51,7 @@ h6 {
   backdrop-filter: saturate(120%) blur(8px);
   border-bottom: 1px solid #222;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+
 }
 
 
